--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "html-webpack-plugin": "^2.30.1",
@@ -56,7 +56,8 @@
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
     "supertest": "^3.0.0",
-    "webpack": "^3.4.1",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   }
 }
