--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "babel ./app -d build",
     "build:watch": "babel ./app -d build --watch",
-    "build:client": "webpack --config ./webpack.config.js/",
+    "build:client": "webpack --config ./webpack.prod.config.js/",
     "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
     "build:prod": "npm run build && npm run build:client",
     "start": "npm run build:prod && NODE_ENV=production node ./build/server/index.js",
@@ -42,15 +42,15 @@
     "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0",
+    "acorn": "^6.1.0",
     "babel-loader": "^8.0.5",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^20.0.4",
     "nodemon": "^1.18.9",
     "parallelshell": "^3.0.2",
     "react-test-renderer": "^15.6.1",
