--- a/package.json
+++ b/package.json
@@ -1,62 +1,48 @@
 {
-  "name": "pathways",
+  "name": "pathways-hire",
   "version": "1.0.0",
-  "description": "",
+  "description": "Connecting Code, Careers, and Companies",
+  "main": "server.js",
   "scripts": {
-    "build": "babel ./app -d build",
-    "build:watch": "babel ./app -d build --watch",
-    "build:client": "webpack --config ./webpack.config.js/",
-    "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
-    "build:prod": "npm run build && npm run build:client",
-    "start": "npm run build:prod && NODE_ENV=production node ./build/server/index.js",
-    "start:dev": "parallelshell 'npm run build:watch' 'npm run build:watch:client' 'nodemon ./build/server/index.js'",
-    "test": "jest --watch --coverage"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:build-server": "webpack --config webpack.server.js --watch",
+    "dev:build-client": "webpack --config webpack.client.js --watch"
   },
   "author": "",
   "license": "ISC",
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/build/"
-    ],
-    "modulePathIgnorePatterns": [
-      "/build/"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
-      }
-    }
-  },
   "dependencies": {
-    "axios": "^0.16.2",
-    "cors": "^2.8.4",
-    "express": "^4.15.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "axios": "0.16.2",
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2017": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "compression": "^1.7.3",
+    "concurrently": "3.5.0",
+    "express": "^4.16.4",
+    "express-http-proxy": "1.0.6",
+    "lodash": "^4.17.11",
+    "nodemon": "^1.18.10",
+    "npm-run-all": "4.1.1",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-helmet": "5.2.0",
+    "react-redux": "5.0.6",
+    "react-router-config": "1.0.0-beta.4",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "serialize-javascript": "1.4.0",
+    "webpack": "3.5.6",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "4.1.0",
+    "webpack-node-externals": "1.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^1.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^20.0.4",
-    "nodemon": "^1.18.9",
-    "parallelshell": "^3.0.2",
-    "react-test-renderer": "^15.6.1",
-    "redux-mock-store": "^1.2.3",
-    "supertest": "^3.0.0",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^3.1.14"
+    "redux-devtools-extension": "^2.13.8"
   }
 }
