--- a/package.json
+++ b/package.json
@@ -6,43 +6,54 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
-    "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch"
+    "dev:build-server": "webpack --config webpack.server.js --watch --mode development",
+    "dev:build-client": "webpack --config webpack.client.js --watch --mode development",
+    "dev-server": "NODE_ENV=development webpack -w & NODE_ENV=development node ./src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "0.16.2",
-    "babel-cli": "6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-es2017": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
+    "axios": "^0.16.2",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "compression": "^1.7.3",
-    "concurrently": "3.5.0",
+    "concurrently": "^3.6.1",
     "express": "^4.16.4",
-    "express-http-proxy": "1.0.6",
+    "express-http-proxy": "^1.5.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
-    "nodemon": "^1.18.10",
-    "npm-run-all": "4.1.1",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-helmet": "5.2.0",
-    "react-redux": "5.0.6",
-    "react-router-config": "1.0.0-beta.4",
-    "react-router-dom": "4.2.2",
-    "redux": "3.7.2",
-    "redux-thunk": "2.2.0",
-    "serialize-javascript": "1.4.0",
-    "webpack": "3.5.6",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "4.1.0",
-    "webpack-node-externals": "1.6.0"
+    "nodemon": "^1.18.11",
+    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.1.1",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.3.1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^1.6.1",
+    "style-loader": "^0.23.1",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-middleware": "^3.6.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.2",
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "redux-devtools-extension": "^2.13.8",
+    "webpack": "^4.18.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
