--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build-server": "webpack --config webpack.server.js --watch --mode development",
-    "dev:build-client": "webpack --config webpack.client.js --watch --mode development",
-    "dev-server": "NODE_ENV=development webpack -w & NODE_ENV=development node ./src/server.js"
+    "dev:build-client": "webpack --config webpack.client.js --watch --mode development"
   },
   "author": "",
   "license": "ISC",
