--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.11",
     "nodemon": "^1.18.11",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
@@ -42,12 +43,14 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "babel-loader": "^8.0.2",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
-    "postcss-loader": "^3.0.0",
+    "isomorphic-style-loader": "^5.0.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "postcss-loader": "^3.0.0",
     "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
