--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.8.0",
     "compression": "^1.7.3",
     "concurrently": "^3.6.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.1",
     "jquery": "^3.3.1",
@@ -25,6 +26,7 @@
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.1.1",
