--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.1",
+    "isomorphic-loader": "^2.0.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.11",
